[tool.poetry]
name = "balchem"
version = "0.1.0"
description = "Balances chemical equations"
authors = ["Leo Paukkonen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.11.1"
numpy = "^1.23.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
